Segunda aula do IMERSÃO JAVA - Alura

--- a/configuracao.properties
+++ b/configuracao.properties
@@ -3,3 +3,5 @@
 # ---------------------------------- PROPRIEDADES GERAIS -------------------------------------------------------------------
 
 chave.api.imdb=Teste
+entrada.files=entrada
+saida.files=saida
