--- a/configuracao.properties
+++ b/configuracao.properties
@@ -2,6 +2,10 @@
 
 # ---------------------------------- PROPRIEDADES GERAIS -------------------------------------------------------------------
 
+# Your API key #
 chave.api.imdb=Teste
+chave.api.nasa=2z72grMbMD70QNrpZ6uz0tDmRbEuBiRhoihEyo5F
+chave.api.marvel=54ffadcbd074c58870b7d33a3e44352c
+hash.api.marvel=aa2ec7ac889d76cc4a5312ff87e1d10f
 entrada.files=entrada
 saida.files=saida
