--- a/configuracao.properties
+++ b/configuracao.properties
@@ -3,9 +3,9 @@
 # ---------------------------------- PROPRIEDADES GERAIS -------------------------------------------------------------------
 
 # Your API key #
-chave.api.imdb=Teste
-chave.api.nasa=2z72grMbMD70QNrpZ6uz0tDmRbEuBiRhoihEyo5F
-chave.api.marvel=54ffadcbd074c58870b7d33a3e44352c
-hash.api.marvel=aa2ec7ac889d76cc4a5312ff87e1d10f
+chave.api.imdb={sua chave imdb}
+chave.api.nasa={sua chave nasa}
+chave.api.marvel={sua chave marvel}
+hash.api.marvel={seu hash marvel (md5(ts+privateKey+publicKey) )}
 entrada.files=entrada
 saida.files=saida
